examples/test/testpolicy14512.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14512
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key18: value14
      key0: value35
      key28: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value27
          key3: value22
      podSelector:
        matchLabels:
          key29: value5
